Pass config file as an env variable.
 More JVM params.